--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ is a link to another nifty site
 <H2>This is a Medium Header - ADDED TEXT</H2> 
 Send me mail at <a href="mailto:support@yourcompany.com">
 support@yourcompany.com</a>. 
-<P> This is a new paragraph! Adding some text to the paragraph now. 
+<P> This is a new paragraph! Adding some text to the paragraph now. More txt
 <P> <B>This is a new paragraph! Next paragraph. </B> 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B> 
 <HR> 
