--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Send me mail at <a href="mailto:support@yourcompany.com">
 support@yourcompany.com</a>. 
 <P> This is a new paragraph! Adding some text to the paragraph now. More txt
 <P> <B>This is a new paragraph! Next paragraph. </B> 
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B> 
+<BR> <B><I>This is a new sentence without a paragraph break, in bold italics. Read the following when you get the chance.</I></B> 
 <HR> 
 </BODY> 
 </HTML> 
