(Change to Index file)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ is a link to another nifty site
 Send me mail at <a href="mailto:support@yourcompany.com">
 support@yourcompany.com</a>. 
 <P> This is a new paragraph! Adding some text to the paragraph now. More txt
-<P> <B>This is a new paragraph! Next paragraph. Adding a change for 06/07 </B> 
+<P> <B>This is a new paragraph! Next paragraph. Adding a change for 06/07. Change for 06/08 now. </B> 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics. Read the following when you get the chance.</I></B> 
 <HR> 
 </BODY> 
