--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 is a link to another nifty site 
 <H1>This is a Header - ADDED TEXT</H1> 
 <H2>This is a Medium Header - ADDED TEXT</H2> 
+<H3>This is a Small Header - ADD MORE TEXT</H3> 
 Send me mail at <a href="mailto:support@yourcompany.com">
 support@yourcompany.com</a>. 
 <P> This is a new paragraph! Adding some text to the paragraph now. More txt
