--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ support@yourcompany.com</a>.
 <P> <B>This is a new paragraph! Next paragraph. Adding a change for 06/07. Change for 06/08 now. New Change applied for 06/10.</B> 
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics. Read the following when you get the chance. New text added to the new sentence.</I></B> 
 Another paragraph added to the page. 
+<P> New Paragraph added.
 <HR> 
 </BODY> 
 </HTML> 
