(Added text to the index.html)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ support@yourcompany.com</a>.
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics. Read the following when you get the chance. New text added to the new sentence.</I></B> 
 Another paragraph added to the page. 
 <P> New Paragraph added.
+<P> New Paragraph added - 06/10/2020.
 <HR> 
 </BODY> 
 </HTML> 
