--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ support@yourcompany.com</a>.
 Another paragraph added to the page. 
 <P> New Paragraph added.
 <P> New Paragraph added - 06/10/2020.
+<P> New Paragraph added - 06/11/2020.
 <HR> 
 </BODY> 
 </HTML> 
