--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Another paragraph added to the page.
 <P> New Paragraph added.
 <P> New Paragraph added - 06/10/2020.
 <P> New Paragraph added - 06/11/2020.
+<P> New Paragraph added - 06/17/2020.For POC to DMC!!
 <HR> 
 </BODY> 
 </HTML> 
