--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Another paragraph added to the page.
 <P> New Paragraph added - 06/10/2020.
 <P> New Paragraph added - 06/11/2020.
 <P> New Paragraph added - 06/17/2020.For POC to DMC!!
+<P> New Paragraph added - 06/18/2020.For Folder sync tests.
 <HR> 
 </BODY> 
 </HTML> 
