--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ Another paragraph added to the page.
 <P> New Paragraph added - 06/11/2020.
 <P> New Paragraph added - 06/17/2020.For POC to DMC!!
 <P> New Paragraph added - 06/18/2020.For Folder sync tests.
+<P> New Paragraph added - 06/23/2020.Today's update!
 <HR> 
 </BODY> 
 </HTML> 
