--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@ support@yourcompany.com</a>.
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics. Read the following when you get the chance. New text added to the new sentence.</I></B> 
 Another paragraph added to the page. 
 <P> New Paragraph added.
-<P> New Paragraph added - 06/10/2020.
+<P> New Paragraph added - 06/10/2020. 
 <P> New Paragraph added - 06/11/2020.
 <P> New Paragraph added - 06/17/2020.For POC to DMC!!
 <P> New Paragraph added - 06/18/2020.For Folder sync tests.
 <P> New Paragraph added - 06/23/2020.Today's update!
+<P> New Paragraph added - 06/25/2020.Today's update! Have a good day!
 <HR> 
 </BODY> 
 </HTML> 
